# PC_Semestralka

./: ,val.sh  ,val_clean.sh  ,win_make.bat  ,win_make_clean.bat  CMakeLists.txt  classifier.c  classifier.h  config.h  error.c  error.h  hash_table.c  hash_table.h  hash_table_entry.c  hash_table_entry.h  loader.c  loader.h  main.c  makefile  makefile.win
doc/: dokumentace.tex
